Add generic listView

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,11 +11,11 @@
 
 <body>
    <div class="post">
-         <h1>Blog Posts</h1>
+         <h1>Blog Postss</h1>
          <ul>
               {% for post in object_list %}
               <li>
-                {{ post.title }}
+               <h1> {{ post.title }}</h1>
                 <small>by {{ post.author }}</small>
                 
               </li>
