--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -30,5 +30,8 @@
         </div>
     </div>
 </div>
+<div class="bck-btn">
+    <a href="{% url 'home' %}" class="btn btn-primary">Back to Home</a>
+</div>
 
 {% endblock content %}
