--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,3 +159,10 @@ body {
 .approval {
     color: rgb(222, 146, 168);
 }
+
+.bck-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+}
