--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -5,6 +5,7 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
+                
                 <!-- Post title goes in these h1 tags -->
                 <h1 class="post-title">{{ post.title }}</h1>
                 <!-- Post author goes before the | the post's created date goes after -->
@@ -23,6 +24,7 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
+                <h1>{{ post.author|slice:"0:1"|upper }}</h1>
                 <p class="card-text">
                     {{ post.content | safe }}
                 </p>
