--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,3 +166,31 @@ body {
     align-items: center;
     margin: 5px;
 }
+
+
+.about-container {
+    display: flex;
+    gap: 50px;
+    margin: 5px auto;
+}
+
+.image {
+    width: 30%;
+    margin-left: 20px;
+}
+
+.image img {
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+}
+
+.content-container {
+    width: 60%;
+    height: 100vh;
+    padding: 10px;
+}
+
+#author {
+    text-transform: uppercase;
+}
