--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% url 'home' as home_url %}
+{% url 'about' as about_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -40,6 +41,8 @@
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home'%}">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{% url 'about'%}">About</a>
 
                 </ul>
                 <span class="navbar-text text-muted">
