Add Django crispy forms

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,3 +194,9 @@ body {
 #author {
     text-transform: uppercase;
 }
+
+#comments-count {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
