--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,11 @@
     <div class="container">
         <div class="row g-0">
             <div class="col-md-6 masthead-text">
+                {% for message in messages%}
+                <div class="alert alert-{{ message.tags }}">
+                    {{ message }}
+                </div>
+                {% endfor %}
                 
                 <!-- Post title goes in these h1 tags -->
                 <h1 class="post-title">{{ post.title }}</h1>
@@ -25,7 +30,7 @@
             <div class="card-body">
                 <!-- The post content goes inside the card-text. -->
                 <!-- Use the | safe filter inside the template tags -->
-                <h1>{{ post.author|slice:"0:1"|upper }}</h1>
+                <h1>{{ user}}</h1>
                 <p class="card-text">
                     {{ post.content | safe }}
                 </p>
@@ -33,8 +38,12 @@
                 <ul>
                     {% for comment in comments%}
                     <li>
-                        <p>{{ comment.author }} | {{ comment.created_on }}</p>
+                        <p>Author: {{ comment.author }} | Created on: {{ comment.created_on }} | Edited on: {{comment.updated_on}}</p>
                         <p>{{ comment.body }}</p>
+                        {% if user.is_authenticated and comment.author == user %}
+                        <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger">Delete</a>
+                        <a href="{% url 'comment_edit' comment.id %}" class="btn btn-primary btn-edit">Edit</a>
+                        {% endif %}
                     </li>
                     {% endfor %}
                 </ul>
@@ -45,11 +54,11 @@
         <div class="card-body">
           {% if user.is_authenticated %}
           <h3>Leave a comment:</h3>
-          <p>Posting as: {{ user.username }}</p>
+          <p>Posting as: {{ user }}</p>
           <form id="commentForm" method="post"
             style="margin-top: 1.3em;">
-            {{ comment_form | crispy }}
             {% csrf_token %}
+            {{ comment_form | crispy }}
             <button id="submitButton" type="submit"
               class="btn btn-signup btn-lg">Submit</button>
           </form>
