--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 {% url 'home' as home_url %}
 {% url 'about' as about_url %}
@@ -45,11 +46,11 @@
                             href="{% url 'home'%}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{% url 'about'%}">About</a>
+                        <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{% url 'about' %}">About</a>
                     </li>
                     {% if user.is_authenticated %}
                      <li class="nav-item">
-                      <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+                      <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout {{user}}</a>
                     </li>
                    {% else %}
                      <li class="nav-item">
