--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -18,7 +18,13 @@
                 <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
             </div>
             <div class="d-none d-md-block col-md-6 masthead-image">
-                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
+                {% if "placeholder" in post.featured_image.url %}
+                <img class="card-img-top" src="{% static 'images/default.jpg' %}"
+                  alt="placeholder image">
+                {% else %}
+                <img class="card-img-top" src=" {{ post.featured_image.url }}"
+                  alt="{{ post.title }}">
+                {% endif %}
             </div>
         </div>
     </div>
@@ -39,10 +45,13 @@
                     {% for comment in comments%}
                     <li>
                         <p>Author: {{ comment.author }} | Created on: {{ comment.created_on }} | Edited on: {{comment.updated_on}}</p>
-                        <p>{{ comment.body }}</p>
+                        <div id="comment{{ comment.id }}">
+                            {{ comment.body | linebreaks }}
+                        </div>
                         {% if user.is_authenticated and comment.author == user %}
-                        <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger">Delete</a>
-                        <a href="{% url 'comment_edit' comment.id %}" class="btn btn-primary btn-edit">Edit</a>
+                        <a href="{% url 'delete_comment' comment.id %}" class="btn btn-danger" onclick=" return confirm('Are you sure you want to delete {{comment.body}}?')">Delete</a>
+                        <!-- <a href="{% url 'comment_edit' comment.id %}" class="btn btn-primary btn-edit"  comment_id = "{{comment.id}}">Edit</a> -->
+                        <button class="btn btn-primary btn-edit" comment_id="{{comment.id}}">Edit</button>
                         {% endif %}
                     </li>
                     {% endfor %}
