--- a/templates/base.html
+++ b/templates/base.html
@@ -49,9 +49,13 @@
                         <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{% url 'about' %}">About</a>
                     </li>
                     {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'addpost'%}">Add Post</a>
+                    </li>
                      <li class="nav-item">
                       <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout {{user}}</a>
                     </li>
+                    
                    {% else %}
                      <li class="nav-item">
                        <a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
