--- a/blog/templates/blog/add_post.html
+++ b/blog/templates/blog/add_post.html
@@ -3,19 +3,20 @@
 {% load crispy_forms_tags%}
 {% block content%}
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 offset-md-2">
-            <h2 class="mt-3">Add Post</h2>
-            <form method="post" enctype="multipart/form-data">
-                {% csrf_token%}
-                {{ form|crispy}}
-                <button type="submit" class="btn btn-primary mt-3">Add Post</button>
-            </form>
+
+
+    <div class="container">
+        <div class="row modal">
+            <div class="col-md-8 offset-md-2">
+                <h2 class="mt-3">Add Post</h2>
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token%}
+                    {{ form|crispy}}
+                    <button type="submit" class="btn btn-primary mt-3">Add Post</button>
+                </form>
+            </div>
         </div>
     </div>
 
-
-</div>
 
 {% endblock%}
