--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,3 +200,26 @@ body {
     align-items: center;
     gap: 10px;
 }
+
+
+.container{
+    height: 100vh;
+    position: relative;
+    margin-bottom: 5px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modal {
+    display: block;
+    position: absolute;
+    z-index: 100;
+    width: 70%;
+    height: 85%;
+    overflow: auto;
+    background-color: #F9FAFC;
+    top: 5%;
+    left: 5%;
+    padding: 5px;
+    margin: 5px;
+    
+}
