--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -200,3 +200,26 @@ body {
     align-items: center;
     gap: 10px;
 }
+
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    position: relative;
+    border: 2px solid #445261;
+}
+
+.modal {
+    display: none;
+    position: absolute;
+    z-index: 100;
+    left: 100px;
+    top: 100px;
+    width: 50%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
